--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>org.smart4j</groupId>
     <artifactId>smart-framework</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
